# dross

./: .env.example  .gitignore  Cargo.toml  README.md
src/: core.rs  lib.rs  main.rs  notion.rs
src/core/: datatypes.rs  helpers.rs
