[package]
name = "huramazda-rs"
authors = ["Alex Melville"]
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
reqwest = "0.11.7"
notion-client = "1.0.2"
openai = "1.0.0-alpha.15"
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
nary_tree = "0.4.3"
